Fix - Shifted .ur-pro-input-icon-padding class from core to pro

--- a/assets/css/user-registration.scss
+++ b/assets/css/user-registration.scss
@@ -140,10 +140,6 @@
 	}
 }
 
-.ur-pro-input-icon-padding {
-	padding-left: 35px !important;
-}
-
 .ur-frontend-form {
 	margin-bottom: 30px;
 	border: 1px solid $border_color;
